<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.myportfolioapp.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24dp"
        android:text="@string/title" />

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/spotify"
        android:id="@+id/spotify"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFF08C35"
        android:onClick="onClickSpotify"/>

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/super1"
        android:id="@+id/scores"
        android:layout_below="@+id/spotify"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFF08C35"
        android:onClick="onClickScores"/>

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/super2"
        android:id="@+id/library"
        android:layout_below="@+id/scores"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFF08C35"
        android:onClick="onClickLibrary"/>

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/buildItBigger"
        android:id="@+id/bigger"
        android:layout_below="@+id/library"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFF08C35"
        android:onClick="onClickBig"/>

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/xyz"
        android:id="@+id/xyz"
        android:layout_below="@+id/bigger"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFF08C35"
        android:onClick="onClickXYZ"/>

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_below="@+id/xyz"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#fb1c1c"
        android:onClick="onClickCapstone"/>

</RelativeLayout>
